# OpenGLES-Android

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/glrect/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  DrawRectangle.cpp  DrawRectangle.h  native-lib.cpp
app/src/main/cpp/delaunator/: CMakeLists.txt  delaunator-lib.cpp  delaunator.cpp  delaunator.h
app/src/main/cpp/opengl/: CMakeLists.txt  DrawRectangle.cpp  DrawRectangle.h  native-lib.cpp
app/src/main/cpp/triangulation/: CMakeLists.txt  Triangulate.cpp  Triangulate.h
app/src/main/java/com/example/glrect/: DrawingActivity.kt  MainActivity.kt  MyRenderer.kt
app/src/main/res/layout/: activity_drawing.xml  activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/glrect/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
